- Adds to text - Fixed alignment of code with comments

--- a/micro/default.css
+++ b/micro/default.css
@@ -815,5 +815,10 @@ div.viewcode-block:target {
 
 /* My edits */
 blockquote {
-  margin-left: 0.65em;
+  margin-left: 0.5em;
+}
+
+
+pre {
+    padding-left: 0px;
 }
